Завершен алгоритм рассчета

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/seven"
+    android:id="@+id/seven1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -23,7 +23,7 @@
             <TextView
                 android:id="@+id/sign"
                 style="@style/my_style3"
-                android:text="версия 0.0.1 студия: Максима Аверина" />
+                android:text="версия 0.0.0 студия" />
 
         </LinearLayout>
 
@@ -35,12 +35,12 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/max_Expression"
+                android:id="@+id/Expression"
                 style="@style/my_style3"
                 android:text="Выражение" />
 
             <TextView
-                android:id="@+id/max_Result"
+                android:id="@+id/Result"
                 style="@style/my_style4"
                 android:text="*Результат*" />
 
@@ -53,19 +53,19 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/max_Open"
+                android:id="@+id/open2"
                 style="@style/my_style"
                 android:text="(" />
 
             <TextView
-                android:id="@+id/max_open2"
+                android:id="@+id/open"
                 style="@style/my_style"
                 android:text=")" />
 
             <TextView
-                android:id="@+id/max_percent"
+                android:id="@+id/AS"
                 style="@style/my_style"
-                android:text="%" />
+                android:text="AS" />
 
             <ImageView
                 android:id="@+id/erase"
@@ -82,7 +82,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/even"
+                android:id="@+id/seven"
                 style="@style/my_style1"
                 android:text="7" />
 
@@ -97,7 +97,7 @@
                 android:text="9" />
 
             <TextView
-                android:id="@+id/two"
+                android:id="@+id/points"
                 style="@style/my_style"
                 android:text=":" />
 
@@ -125,7 +125,7 @@
                 android:text="6" />
 
             <TextView
-                android:id="@+id/textView24"
+                android:id="@+id/multiply"
                 style="@style/my_style"
                 android:text="*" />
 
@@ -166,6 +166,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/zero"
                 style="@style/my_style1"
                 android:text="0" />
 
@@ -175,7 +176,7 @@
                 android:text="." />
 
             <TextView
-                android:id="@+id/textView31"
+                android:id="@+id/equally"
                 style="@style/my_style1"
                 android:text="=" />
 
