Завершен алгоритм рассчета

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FFFFFF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2713D6</color>
-    <color name="red">#E80A0A</color>
+    <color name="red">#A80400</color>
     <color name="red_weak">#AF5959</color>
 </resources>
