--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,6 +58,7 @@
         <item name="android:gravity">end</item>
         <item name="android:ellipsize">end</item>
         <item name="singleLine">true</item>
+        <item name="android:textSize">28sp</item>
     </style>
 
     <style name="my_style4">
@@ -70,6 +71,13 @@
         <item name="android:gravity">end</item>
         <item name="android:ellipsize">start</item>
         <item name="singleLine">true</item>
+        <item name="android:textSize">28sp</item>
     </style>
-
+    <style name="my_style5">
+        <item name="android:background">@color/red</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_margin">1dp</item>
+    </style>
 </resources>
