--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:id="@+id/sign"
                 style="@style/my_style3"
-                android:text="версия 0.0.0 студия" />
+                android:text="версия 0.0.1" />
 
         </LinearLayout>
 
@@ -62,16 +62,17 @@
                 style="@style/my_style"
                 android:text=")" />
 
-            <TextView
+            <ImageView
                 android:id="@+id/AS"
-                style="@style/my_style"
-                android:text="AS" />
+                style="@style/my_style5"
+                android:src="@mipmap/erasing1"
+                android:scaleType="center"/>
 
             <ImageView
                 android:id="@+id/erase"
-                style="@style/my_style"
+                style="@style/my_style5"
                 android:scaleType="center"
-                android:src="@drawable/abc_vector_test" />
+                android:src="@mipmap/erasing2" />
 
         </LinearLayout>
 
@@ -99,7 +100,7 @@
             <TextView
                 android:id="@+id/points"
                 style="@style/my_style"
-                android:text=":" />
+                android:text="/" />
 
         </LinearLayout>
 
@@ -166,18 +167,18 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/dot"
+                style="@style/my_style"
+                android:text="." />
+
+            <TextView
                 android:id="@+id/zero"
                 style="@style/my_style1"
                 android:text="0" />
 
             <TextView
-                android:id="@+id/dot"
-                style="@style/my_style1"
-                android:text="." />
-
-            <TextView
                 android:id="@+id/equally"
-                style="@style/my_style1"
+                style="@style/my_style"
                 android:text="=" />
 
             <TextView
