--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/seven1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_700"
     tools:context=".MainActivity">
 
 
@@ -23,7 +24,7 @@
             <TextView
                 android:id="@+id/sign"
                 style="@style/my_style3"
-                android:text="версия 0.0.1" />
+                android:text="версия: 0.0.1.2" />
 
         </LinearLayout>
 
@@ -37,12 +38,15 @@
             <TextView
                 android:id="@+id/Expression"
                 style="@style/my_style3"
-                android:text="Выражение" />
+                android:ellipsize="end"
+                android:singleLine="true"/>
 
             <TextView
                 android:id="@+id/Result"
                 style="@style/my_style4"
-                android:text="*Результат*" />
+                android:text="="
+                android:ellipsize="end"
+                android:singleLine="true"/>
 
         </LinearLayout>
 
@@ -51,6 +55,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/AS"
+                style="@style/my_style5"
+                android:src="@mipmap/ic_launcher3"
+                android:scaleType="center"/>
 
             <TextView
                 android:id="@+id/open2"
@@ -63,16 +72,10 @@
                 android:text=")" />
 
             <ImageView
-                android:id="@+id/AS"
-                style="@style/my_style5"
-                android:src="@mipmap/erasing1"
-                android:scaleType="center"/>
-
-            <ImageView
                 android:id="@+id/erase"
                 style="@style/my_style5"
                 android:scaleType="center"
-                android:src="@mipmap/erasing2" />
+                android:src="@mipmap/ic_launcher8" />
 
         </LinearLayout>
 
