--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
         <item name="fontFamily">@font/autour_one</item>
+        <item name="android:alpha">0.9</item>
     </style>
 
 
@@ -41,6 +42,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
         <item name="fontFamily">@font/autour_one</item>
+        <item name="android:alpha">0.9</item>
     </style>
 
     <style name="my_style2">
@@ -79,5 +81,6 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_margin">1dp</item>
+        <item name="android:alpha">0.9</item>
     </style>
 </resources>
