--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,58 +2,50 @@
     <!-- Base application theme. -->
     <style name="Theme.Calc1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/d</item>
+        <item name="colorPrimaryVariant">@color/i</item>
+        <item name="colorOnPrimary">@color/d</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/i</item>
+        <item name="colorSecondaryVariant">@color/d</item>
+        <item name="colorOnSecondary">@color/i</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
-
-
+    <!--симвовы-->
     <style name="my_style">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@color/blue</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/b</item>
+        <item name="android:textColor">@color/a</item>
         <item name="android:textSize">32sp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
         <item name="fontFamily">@font/autour_one</item>
     </style>
 
-
-
-
+    <!--кнопки с цифрами-->
     <style name="my_style1">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@color/purple_500</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/s</item>
+        <item name="android:textColor">@color/a</item>
         <item name="android:textSize">32sp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">1dp</item>
         <item name="fontFamily">@font/autour_one</item>
     </style>
 
+    <!--фон сверху-->
     <style name="my_style2">
-        <item name="android:background">@color/purple_700</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-
-    <style name="my_style3">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@color/purple_700</item>
-        <item name="android:textColor">@color/purple_200</item>
+        <item name="android:background">@color/d</item>
+        <item name="android:textColor">@color/a</item>
         <item name="fontFamily">@font/autour_one</item>
         <item name="android:gravity">end</item>
         <item name="android:ellipsize">end</item>
@@ -61,20 +53,23 @@
         <item name="android:textSize">28sp</item>
     </style>
 
-    <style name="my_style4">
+    <!--фон снизу-->
+    <style name="my_style3">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@color/purple_700</item>
-        <item name="android:textColor">@color/purple_200</item>
+        <item name="android:background">@color/d</item>
+        <item name="android:textColor">@color/a</item>
         <item name="fontFamily">@font/autour_one</item>
         <item name="android:gravity">end</item>
         <item name="android:ellipsize">start</item>
         <item name="singleLine">true</item>
         <item name="android:textSize">28sp</item>
     </style>
-    <style name="my_style5">
-        <item name="android:background">@color/red</item>
+
+    <!--кнопки стереть-->
+    <style name="my_style4">
+        <item name="android:background">@color/i</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">1</item>
